test/errors/scopes1.input.asm

* = $801

foo: {
    jmp _local_labelx
_local_label:
    rts
}
